force-app/main/default/objects/Account/fields/Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range__c</fullName>
    <label>Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1M</fullName>
            </value>
            <value>
                <fullName>1M-5M</fullName>
            </value>
            <value>
                <fullName>5M-10M</fullName>
            </value>
            <value>
                <fullName>10M-25M</fullName>
            </value>
            <value>
                <fullName>25M-50M</fullName>
            </value>
            <value>
                <fullName>50M-100M</fullName>
            </value>
            <value>
                <fullName>100M-250M</fullName>
            </value>
            <value>
                <fullName>250M- 500M</fullName>
            </value>
            <value>
                <fullName>500M-1B</fullName>
            </value>
            <value>
                <fullName>1B-5B</fullName>
            </value>
            <value>
                <fullName>5B+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>