force-app/main/default/objects/Account/fields/Salesforce_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Relationship_Type__c</fullName>
    <label>Salesforce Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Potential Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>